# perpetual-trading-strategy-loop-engineering-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
hypothesis/: HYPOTHESIS.md  HYPOTHESIS_trend_following.md  ITERATION_LOG.md  KILL_CRITERIA.md  SCREEN_SPEC_positioning_divergence.md
results/: research_btc_v1.json  research_btc_v1_1.json  screening_log.jsonl
scripts/: build_bars.py  download_basis.py  download_data.py  download_history.py  measure_basis.py  run_backtest.py  screen_funding.py  segment_data.py  testnet_smoke.py
src/backtest/: __init__.py  costs.py  engine.py  metrics.py  walkforward.py
src/core/: __init__.py  config.py  cvd.py
src/execution/: __init__.py  binance_um.py  interface.py  simulator.py
src/ingest/: __init__.py  archive.py  binance_dns.py  funding.py
src/research/: __init__.py  positioning.py  screen.py
src/risk/: __init__.py  monitor.py
src/strategy/: __init__.py  divergence.py  funding_filter.py
tests/: conftest.py  test_backtest.py  test_binance_um.py  test_cvd.py  test_divergence.py  test_funding_filter.py  test_positioning.py  test_risk.py  test_screen.py  test_segment_data.py
