[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-bot"
version = "0.1.0"
description = "Multi-strategy perpetual futures trading bot — nested control-loop architecture"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "aiosqlite>=0.19",
    "ccxt>=4.2",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]
